CHANGES
*******

1.3 (unreleased)
================

- Nothing changed yet.


1.2 (2011-04-25)
================

- Replace MANIFEST.in with hgtools to provide setuptools-svn like functionality.

1.1 (2011-01-20)
================

- Bootstrap.py and .hgignore were not distributed before.


1.0 (2011-01-11)
================

- initial release.