@@ -8,4 +8,3 @@ parts
 *~
 develop-eggs
 dist
-*.egg
