@@ -1,0 +1,4 @@
+recursive-include fanstatictemplate *_tmpl *.txt *py
+include fanstatictemplate/template_metadata/+dot+hgignore
+include *.txt
+include bootstrap.py
