@@ -8,3 +8,4 @@ parts
 *~
 develop-eggs
 dist
+*-compile-*
