@@ -1,0 +1,3 @@
+recursive-include ${project_path}/resources *.*
+recursive-include ${project_path} *.txt
+include *.txt
