@@ -33,7 +33,6 @@ setup(
     packages=find_packages(),${namespace_packages|nothing}
     include_package_data=True,
     zip_safe=False,
-    setup_requires=['hgtools'],
     install_requires=[
         'fanstatic',
         'setuptools',
