@@ -4,7 +4,8 @@ CHANGES
 1.3 (unreleased)
 ================
 
-- Nothing changed yet.
+- Replaced hgtools with MANIFEST.in in order to have better support for 
+  Resources with compilers and minifiers. 
 
 
 1.2 (2011-04-25)
